[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blitz_lib"
version = "0.2.0"
description = "Blitz client library for parameter engine via zmq and CUDA IPC"
authors = [
    {name = "green_egg", email = "green_egg@sjtu.edu.cn"}
]
dependencies = [
    "torch",
    "cupy-cuda12x",
    "zmq",
]
requires-python = ">=3.10"
